--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
     <title>starter</title>
 </head>
+
 <body>
 
     <!-- HEADER -->
@@ -16,6 +18,61 @@
 
     <!-- MAIN -->
     <main class="main">
+
+        <section class="hero mt-5">
+            <div class="container">
+                <h1 class="h3 text-dark text-center form__heading">Kim birinchi borishga!</h1>
+                <form
+                    class="form d-flex flex-column flex-md-row align-items-center justify-content-center p-2 mx-auto mb-4 border-0 rounded">
+                    <label
+                        class="form-label d-flex flex-column flex-md-row align-items-center justify-content-center text-secondary h4 m-0">Masofa
+                        <input
+                            class="form__input d-flex flex-shrink-0 w-50 mx-3 mb-3 mt-1 mb-md-0 form-control border-dark"
+                            type="text" min="0" name="state_population" required placeholder="100km" autocomplete="off">
+                    </label>
+                    <button class=" btn btn-secondary" type="submit">Hisobla</button>
+                </form>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="card mb-3 mb-md-0 border-dark">
+                            <div class="card-body d-flex flex-column align-items-center">
+                                <img src="./images/people.png" alt="people" width="50" height="50">
+                                <p class="h4 m-0 mb-2 p-0">piyoda</p>
+                                <p class="people h5 m-0 p-0 text-secondary">N soatda</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="card mb-3 mb-md-0 border-dark">
+                            <div class="card-body d-flex flex-column align-items-center">
+                                <img src="./images/velo-icon.png" alt="people" width="50" height="50">
+                                <p class="h4 m-0 mb-2 p-0">velosiped</p>
+                                <p class="bicycle h5 m-0 p-0 text-secondary">N soatda</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="card mb-3 mb-md-0 border-dark">
+                            <div class="card-body d-flex flex-column align-items-center">
+                                <img class="my-2" src="./images/car-icon.jpg" alt="people" width="50" height="50">
+                                <p class="h4 m-0 mb-2 p-0">mashina</p>
+                                <p class="car h5 m-0 p-0 text-secondary">N soatda</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="card mb-3 mb-md-0 border-dark">
+                            <div class="card-body d-flex flex-column align-items-center">
+                                <img src="./images/airplane-icon.jpg" alt="people" width="50" height="50">
+                                <p class="h4 m-0 mb-2 p-0">samalyot</p>
+                                <p class="plane h5 m-0 p-0 text-secondary">N soatda</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <p class="error mx-auto mt-3 h3 text-center text-danger"></p>
+        </section>
 
     </main>
 
@@ -30,4 +87,5 @@
     <script src="./js/script.js"></script>
 
 </body>
+
 </html>
